examples/test/testpolicy13283.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13283
  namespace: namespace42
spec:
  podSelector:
    matchLabels:
      key26: value22
      key20: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value41
      podSelector:
        matchLabels:
          key7: value21
          key46: value20
          key48: value35
